--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">BTL_IOT</string>
+    <string name="name">Name</string>
+    <string name="user_name">User name</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="dont_have_account">Don\'t have account? Register Now</string>"
+    <string name="already_have_an_account">Already have an account? Login</string>
+    <string name="plant_watering_system">Plant Watering System</string>
 </resources>
