--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BTL_IOT</string>
     <string name="name">Name</string>
+    <string name="Email">Email</string>
     <string name="user_name">User name</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
